--- a/css/top-n-bottom.css
+++ b/css/top-n-bottom.css
@@ -26,6 +26,7 @@ main {
     max-width: 100%
 }
 html {
+    overflow-x: hidden;
     scroll-behavior: smooth
 }
 h1 {
